--- a/docker/bin/install
+++ b/docker/bin/install
@@ -1,4 +1,4 @@
 #!/bin/bash
 
 echo "RUNNING: 'bin/install"
-docker-compose exec app ./bin/install
+docker-compose exec --user $(id -u):$(id -g) app ./bin/install
